edit for policy css

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
       <!-- Modal Section -->
       <section>
-        <div class="backdrop is-ope">
+        <div class="backdrop is-open">
           <form name="application-form" class="modal">
             <button type="button" class="close-btn">
               <svg width="8" height="8">
