class name for modalbox is edited

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     <main>
       <!-- Modal Section -->
       <section>
-        <div class="backdrop is-open">
+        <!-- To display the modal window, add the letter "n" to the end of the "backdrop is-ope" class. -->
+        <div class="backdrop is-ope">
           <form name="application-form" class="modal">
             <button type="button" class="close-btn">
               <svg width="8" height="8">
